[package]
name = "rsloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
bit-set = "0.5.3"
ignore = "0.4.20"
proc-macro2 = { version = "1.0.50", features = ["span-locations"] }
syn = { version = "1.0.107", features = ["full", "extra-traits", "visit"] }
